Archive2/57/7061de1709fc7d/output
main.cpp:5:38: error: operator '==' has no left operand
     #if defined(TESTING) && (TESTING == 1)
                                      ^
