Archive2/57/7061de1709fc7d/main.cpp
#include <iostream>
#define TESTING

int main() {
    #if defined(TESTING) && (TESTING == 1)
    std::cout << "testing";
    #endif
}